--- a/3proxy.cfg
+++ b/3proxy.cfg
@@ -17,15 +17,15 @@ timeouts 1 5 30 60 180 1800 15 60
 #internal YOURSERVERIP
 #Create users proxyuser1 and proxyuser2 and specify a password
 #
-users $/etc/3proxy/.proxyauth
+#users $/etc/3proxy/.proxyauth
 #Specify daemon as a start mode
 #
 daemon
 #Logs path and log format. Creation date will be added to a log name
 #log /dev/null
 #
-log /var/log/3proxy/3proxy.log
-logformat "- +_L%t.%. %N.%p %E %U %C:%c %R:%r %O %I %h %T"
+#log /var/log/3proxy/3proxy.log
+#logformat "- +_L%t.%. %N.%p %E %U %C:%c %R:%r %O %I %h %T"
 #Compress logs using gzip
 #
 archiver gz /usr/bin/gzip %F
